[gd_scene load_steps=29 format=3 uid="uid://cfnpfffrxi5lg"]

[ext_resource type="AudioStream" uid="uid://btmkak6fttu2b" path="res://Sounds/DogOpen.ogg" id="1_45d82"]
[ext_resource type="Script" path="res://CustomScripts/Logic/Player/DialogueSystem.gd" id="1_slorn"]
[ext_resource type="Script" path="res://CustomScripts/NPC/HealthController.gd" id="2_vvu1u"]
[ext_resource type="PackedScene" uid="uid://dbrrtfnihdheq" path="res://KOMPrefabs/blood_splatter_KOM.tscn" id="3_6xhvh"]
[ext_resource type="AudioStream" uid="uid://cnq4ok8ggd6bs" path="res://Sounds/Gore02.ogg" id="4_g774m"]
[ext_resource type="Script" path="res://DeadStars/scripts/Behaviors/mimic_pod_behavior.gd" id="5_cwqs1"]
[ext_resource type="PackedScene" uid="uid://c7ltdx2msggbi" path="res://DeadStars/models/Mimic_Pod/Mimic_Pod.glb" id="5_tsrjo"]
[ext_resource type="PackedScene" uid="uid://dm0ks56ht7kq0" path="res://DeadStars/prefabs/system/scene_instantiator.tscn" id="7_v5ogf"]
[ext_resource type="Script" path="res://CustomScripts/Objects/TriggerVolume.gd" id="9_ah638"]
[ext_resource type="PackedScene" uid="uid://dd5twwaacs6x4" path="res://DeadStars/prefabs/NPCs/Enemies/mimic_shambler_enemy.tscn" id="9_dmeg3"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_b53q0"]
radius = 0.476608
height = 1.75373

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_j16kl"]
animation = &"Pod_Close"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_my7b1"]
animation = &"Pod_Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_r38fg"]
animation = &"Pod_Idle_Closed"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4keha"]
animation = &"Pod_Idle_Open"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ar28e"]
animation = &"Pod_Open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_t3dhr"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3n2t2"]
advance_mode = 2
advance_condition = &"open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_37ufg"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6x1xl"]
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8rieh"]
xfade_time = 0.3
advance_mode = 2
advance_condition = &"close"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ohxrc"]
xfade_time = 0.3
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_6a3du"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xs8ie"]
xfade_time = 0.3
advance_mode = 2
advance_condition = &"die"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ljenq"]
xfade_time = 0.5
advance_mode = 2
advance_condition = &"open"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_bbvms"]
xfade_time = 0.5
advance_mode = 2
advance_condition = &"close"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ty7u7"]
states/End/position = Vector2(1145, 100)
states/Pod_Close/node = SubResource("AnimationNodeAnimation_j16kl")
states/Pod_Close/position = Vector2(986, 87)
states/Pod_Die/node = SubResource("AnimationNodeAnimation_my7b1")
states/Pod_Die/position = Vector2(815, 18)
states/Pod_Idle_Closed/node = SubResource("AnimationNodeAnimation_r38fg")
states/Pod_Idle_Closed/position = Vector2(815, 174)
states/Pod_Idle_Open/node = SubResource("AnimationNodeAnimation_4keha")
states/Pod_Idle_Open/position = Vector2(598, 18)
states/Pod_Open/node = SubResource("AnimationNodeAnimation_ar28e")
states/Pod_Open/position = Vector2(598, 174)
states/Start/position = Vector2(442, 100)
transitions = ["Start", "Pod_Idle_Open", SubResource("AnimationNodeStateMachineTransition_t3dhr"), "Pod_Idle_Open", "Pod_Open", SubResource("AnimationNodeStateMachineTransition_3n2t2"), "Pod_Open", "Pod_Idle_Closed", SubResource("AnimationNodeStateMachineTransition_37ufg"), "Pod_Idle_Open", "Pod_Die", SubResource("AnimationNodeStateMachineTransition_6x1xl"), "Pod_Idle_Closed", "Pod_Close", SubResource("AnimationNodeStateMachineTransition_8rieh"), "Pod_Close", "Pod_Die", SubResource("AnimationNodeStateMachineTransition_ohxrc"), "Pod_Close", "Pod_Idle_Open", SubResource("AnimationNodeStateMachineTransition_6a3du"), "Pod_Idle_Closed", "Pod_Die", SubResource("AnimationNodeStateMachineTransition_xs8ie"), "Pod_Close", "Pod_Open", SubResource("AnimationNodeStateMachineTransition_ljenq"), "Pod_Open", "Pod_Close", SubResource("AnimationNodeStateMachineTransition_bbvms")]
graph_offset = Vector2(-86, -90)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8a214"]
height = 2.24608
radius = 2.69144

[node name="MimicPod" type="StaticBody3D"]

[node name="Hurting" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
autoplay = true
max_distance = 5.0

[node name="OpenSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("1_45d82")

[node name="DialogueSystem" type="Node3D" parent="." node_paths=PackedStringArray("soundSource")]
script = ExtResource("1_slorn")
npcName = "Pod"
soundSource = NodePath("../Hurting")
looking = false

[node name="Col" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.858521, 0)
shape = SubResource("CapsuleShape3D_b53q0")

[node name="HealthController" type="Node3D" parent="." node_paths=PackedStringArray("DialogueSystem", "SoundSource")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("2_vvu1u")
Innocent = true
HP = 1
removeOnDeath = false
DialogueSystem = NodePath("../DialogueSystem")
SoundSource = NodePath("../Hurting")
gibRoot = ExtResource("3_6xhvh")
HurtSound = ExtResource("4_g774m")

[node name="Behavior" type="Node" parent="." node_paths=PackedStringArray("AnimTree", "DialogueSystem", "instantiator", "SoundPlayer")]
script = ExtResource("5_cwqs1")
AnimTree = NodePath("../AnimationTree")
DialogueSystem = NodePath("../DialogueSystem")
instantiator = NodePath("../SceneInstantiator")
SoundPlayer = NodePath("../OpenSound")
OpenSoundEffect = ExtResource("1_45d82")
MaxSpawnTime = 10.0

[node name="Mimic_Pod" parent="." instance=ExtResource("5_tsrjo")]

[node name="Skeleton3D" parent="Mimic_Pod/Mimic Pod/rig" index="0"]
bones/3/rotation = Quaternion(0.242437, -0.0439538, -0.22083, 0.943677)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.0799782, 0.00737537, 0.113177, 0.990323)
bones/5/rotation = Quaternion(-0.0654566, -0.00279538, 0.0225321, 0.997597)
bones/6/rotation = Quaternion(-0.106011, -0.00612416, 0.0803064, 0.991098)
bones/7/rotation = Quaternion(-0.141439, 0.010444, 0.199595, 0.969561)
bones/8/rotation = Quaternion(-0.14736, -0.00215966, 0.169977, 0.974366)
bones/9/rotation = Quaternion(-0.0735273, -0.0117244, -0.0550088, 0.995706)
bones/10/rotation = Quaternion(-0.00661417, 0.000715117, -0.14477, 0.989443)
bones/11/rotation = Quaternion(0.0361185, -0.0323082, -0.197526, 0.979099)
bones/12/rotation = Quaternion(-0.184767, 0.0488505, -0.378777, 0.90554)
bones/12/scale = Vector3(1, 1, 1)
bones/13/rotation = Quaternion(0.179306, -0.0436945, 0.186201, 0.965023)
bones/14/rotation = Quaternion(-0.0478359, -0.0108969, 0.174442, 0.983444)
bones/15/rotation = Quaternion(0.142069, -0.0173583, 0.0690527, 0.987293)
bones/16/rotation = Quaternion(0.158629, 0.148832, 0.201116, 0.955112)
bones/17/rotation = Quaternion(-0.02481, 0.0116761, -0.0262726, 0.999279)
bones/18/rotation = Quaternion(-0.0971603, 0.00447963, 0.0604292, 0.993422)
bones/19/rotation = Quaternion(-0.0754397, 0.0678595, -0.00916894, 0.994797)
bones/20/rotation = Quaternion(-0.081609, 0.129464, -0.0962353, 0.983523)
bones/21/rotation = Quaternion(-0.244387, 0.162624, 0.121993, 0.948128)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(0.0975557, -0.139316, -0.0801908, 0.982163)
bones/23/rotation = Quaternion(0.0571202, -0.0364586, -0.0385012, 0.996958)
bones/24/rotation = Quaternion(0.124434, -0.0136174, -0.0755134, 0.989257)
bones/25/rotation = Quaternion(0.248278, 0.212693, -0.0408007, 0.944169)
bones/26/rotation = Quaternion(0.107207, -0.00586551, 0.0262787, 0.993872)
bones/27/rotation = Quaternion(-0.0259817, 0.246902, 0.3014, 0.92061)
bones/27/scale = Vector3(1, 1, 1)
bones/28/rotation = Quaternion(0.0251309, -0.185083, -0.238332, 0.953053)
bones/29/rotation = Quaternion(0.0267571, -0.0661412, 0.040135, 0.996644)
bones/30/rotation = Quaternion(-0.036383, -0.0348091, -0.146606, 0.987913)
bones/31/rotation = Quaternion(0.0167754, 0.270861, -0.277449, 0.921615)
bones/32/rotation = Quaternion(0.255371, 0.700242, -0.105292, 0.658302)
bones/33/rotation = Quaternion(0.0913557, -0.0452051, 0.142695, 0.984504)
bones/34/rotation = Quaternion(0.0671467, 0.111846, 0.091043, 0.987265)
bones/35/rotation = Quaternion(0.0252902, 0.249804, 0.242629, 0.937064)
bones/36/rotation = Quaternion(0.246117, -0.0539768, 0.0545038, 0.9662)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(-0.154903, 0.0195904, -0.0170909, 0.987588)
bones/38/rotation = Quaternion(0.0946866, -0.00955271, 0.0176384, 0.995305)
bones/39/rotation = Quaternion(-0.224715, 0.0170366, -0.039702, 0.973466)
bones/40/rotation = Quaternion(-0.352622, 0.0245164, -0.129562, 0.926429)
bones/41/rotation = Quaternion(-0.15251, -0.162784, -0.0120875, 0.974729)
bones/42/rotation = Quaternion(-0.239401, 0.0157865, 0.00991031, 0.970742)
bones/43/rotation = Quaternion(-0.412612, 0.0773904, 0.0509962, 0.90618)
bones/52/rotation = Quaternion(0.232115, 0.612874, 0.696568, -0.292064)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../Mimic_Pod")
tree_root = SubResource("AnimationNodeStateMachine_ty7u7")
anim_player = NodePath("../Mimic_Pod/AnimationPlayer")
parameters/conditions/close = false
parameters/conditions/die = false
parameters/conditions/open = false

[node name="SceneInstantiator" parent="." instance=ExtResource("7_v5ogf")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0146652, 0.826364, 0.0322757)
Scene = ExtResource("9_dmeg3")

[node name="TriggerVolume" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.17305, 0)
collision_layer = 8192
collision_mask = 8192
script = ExtResource("9_ah638")

[node name="CollisionShape3D" type="CollisionShape3D" parent="TriggerVolume"]
shape = SubResource("CylinderShape3D_8a214")

[connection signal="death" from="HealthController" to="Behavior" method="Die"]
[connection signal="VolumeBeenEntered" from="TriggerVolume" to="Behavior" method="Open"]
[connection signal="VolumeBeenExited" from="TriggerVolume" to="Behavior" method="Close"]
[connection signal="area_entered" from="TriggerVolume" to="TriggerVolume" method="_on_area_entered"]
[connection signal="area_exited" from="TriggerVolume" to="TriggerVolume" method="_on_area_exited"]
[connection signal="body_entered" from="TriggerVolume" to="TriggerVolume" method="_on_body_entered"]
[connection signal="body_exited" from="TriggerVolume" to="TriggerVolume" method="_on_body_exited"]

[editable path="Mimic_Pod"]
